--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <span class="badge badge--primary">10% OFF</span>
+    <ul class="list list--inline">
+      <li class="list__item">Item 1</li>
+      <li class="list__item">Item 2</li>
+      <li class="list__item">Item 3</li>
+    </ul>
   </body>
 </html>
