--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <span class="icon-container">
-      <svg class="icon icon--primary">
-        <use xlink:href="images/sprite.svg#wordpress"></use>
-      </svg>
-    </span>
+    <button class="btn btn--primary btn--block">Button</button>
+    <a href="#" class="btn btn--secondary btn--block">Button</a>
   </body>
 </html>
