Build input component.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <button class="btn btn--primary btn--block">Button</button>
-    <a href="#" class="btn btn--secondary btn--block">Button</a>
+    <input type="text" class="input" placeholder="Enter domain here..." />
   </body>
 </html>
