--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <input type="text" class="input" placeholder="Enter domain here..." />
+    <div class="input-group">
+      <input type="text" class="input" placeholder="Enter domain here..." />
+      <button class="btn btn--accent">Search</button>
+    </div>
   </body>
 </html>
