--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="input-group">
-      <input type="text" class="input" placeholder="Enter domain here..." />
-      <button class="btn btn--accent">Search</button>
+    <div style="width: 30%; padding: 4rem;">
+      <div class="card card--primary">
+        <header class="card__header">Card Title</header>
+        <div class="card__body">Lorem ipsum dolor sit amet.</div>
+      </div>
+      </div>
     </div>
   </body>
 </html>
