--- a/index.html
+++ b/index.html
@@ -15,11 +15,27 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div style="width: 30%; padding: 4rem;">
-      <div class="card card--primary">
-        <header class="card__header">Card Title</header>
-        <div class="card__body">Lorem ipsum dolor sit amet.</div>
-      </div>
+    <div style="width: 60%; padding: 4rem;">
+      <div class="plan">
+        <div class="card card--secondary">
+          <header class="card__header">
+            <h3 class="plan__name">Entry</h3>
+            <span class="plan__price">$15</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge--small">10% OFF</span>
+            <snap class="plan__description">Easy start on the cloud</snap>
+          </header>
+          <div class="card__body">
+            <ul class="list list--tick">
+            <li class="list__item">Unlimited Websites</li>
+            <li class="list__item">Unlimited Bandwidth</li>
+            <li class="list__item">100 GB SSD Storage</li>
+            <li class="list__item">3 GB RAM</li>
+          </ul>
+          <button class="btn btn--outline btn--block">BUY NOW</button>
+          </div>
+        </div>
+        </div>
       </div>
     </div>
   </body>
