--- a/index.html
+++ b/index.html
@@ -15,15 +15,22 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="collapsible collapsible--expanded">
-      <header class="collapsible__header">
-        <h2 class="collapsible__heading">Item 1</h2>
-        <span class="icon--chevron collapsible__chevron"> </span>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, amet.
+        </p>
       </header>
-      <div class="collapsible__content">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, magni.
+    </section>
+    <section class="block block--dark block--skewed-left">
+      <div class="container">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, amet.
+        </p>
       </div>
-    </div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
