Fix showcase block component.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <section class="block block--dark block--skewed-right block-showcase">
       <header class="block__header">
-        <h2>User-friendly Control Panel</h2>
+        <h2 class="block__heading">User-friendly Control Panel</h2>
       </header>
       <div class="container grid grid--1x2">
         <picture class="block-showcase__image">
@@ -34,7 +34,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#wordpress"></use>
+                  <use xlink:href="images/sprite.svg#snap"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -51,7 +51,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#wordpress"></use>
+                  <use xlink:href="images/sprite.svg#growth"></use>
                 </svg>
               </div>
               <div class="media__body">
