Build Footer block component.

--- a/index.html
+++ b/index.html
@@ -15,48 +15,91 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="block">
-      <header class="block__header">
-        <h2>What our Customers are Saying</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, sed?
-        </p>
-      </header>
-      <div class="container">
-        <div class="card testimonial">
-          <div class="grid grid--1x2">
-            <div class="testimonial__image">
-              <img src="images/testimonial.jpg" alt="A smiling customer" />
-              <span class="icon-container icon-container--accent">
-                <svg class="icon icon--white icon--small">
-                  <use xlink:href="images/sprite.svg#quotes"></use>
-                </svg>
-              </span>
-            </div>
-            <blockquote class="quote">
-              <p class="quote__text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Perferendis repudiandae ipsum voluptatibus autem voluptates, qui
-                laudantium. Labore explicabo vitae molestias.
-              </p>
-              <footer>
-                <div class="media">
-                  <div class="media__image">
-                    <svg class="icon icon--primary quote__line">
-                      <use xlink:href="images/sprite.svg#line"></use>
-                    </svg>
-                  </div>
-                  <div class="media__body">
-                    <h3 class="media__title quote__author">John Smith</h3>
-                    <p class="quote__company">ABC Company</p>
-                  </div>
-                </div>
-              </footer>
-            </blockquote>
-          </div>
-        </div>
+    <footer class="block block--dark block-footer">
+      <div class="container grid footer__grid">
+        <section class="collapsible collapsible__footer">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">PRODUCTS</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <ul class="list footer__list collapsible__content">
+            <li class="footer-list__item"><a href="#">WordPress Hosting</a></li>
+            <li class="footer-list__item">
+              <a href="#">Free Automated WordPress</a>
+            </li>
+            <li class="footer-list__item"><a href="#">Migrations</a></li>
+            <li class="footer-list__item"><a href="#">Domain Names</a></li>
+            <li class="footer-list__item">
+              <a href="#">Monthly Web Hosting</a>
+            </li>
+          </ul>
+        </section>
+        <section class="collapsible collapsible__footer">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">PRODUCTS</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <ul class="list footer__list collapsible__content">
+            <li class="footer-list__item"><a href="#">WordPress Hosting</a></li>
+            <li class="footer-list__item">
+              <a href="#">Free Automated WordPress</a>
+            </li>
+            <li class="footer-list__item"><a href="#">Migrations</a></li>
+            <li class="footer-list__item"><a href="#">Domain Names</a></li>
+            <li class="footer-list__item">
+              <a href="#">Monthly Web Hosting</a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="collapsible collapsible__footer">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">PRODUCTS</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <ul class="list footer__list collapsible__content">
+            <li class="footer-list__item"><a href="#">WordPress Hosting</a></li>
+            <li class="footer-list__item">
+              <a href="#">Free Automated WordPress</a>
+            </li>
+            <li class="footer-list__item"><a href="#">Migrations</a></li>
+            <li class="footer-list__item"><a href="#">Domain Names</a></li>
+            <li class="footer-list__item">
+              <a href="#">Monthly Web Hosting</a>
+            </li>
+          </ul>
+        </section>
+        <section class="collapsible collapsible__footer">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">PRODUCTS</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <ul class="list footer__list collapsible__content">
+            <li class="footer-list__item"><a href="#">WordPress Hosting</a></li>
+            <li class="footer-list__item">
+              <a href="#">Free Automated WordPress</a>
+            </li>
+            <li class="footer-list__item"><a href="#">Migrations</a></li>
+            <li class="footer-list__item"><a href="#">Domain Names</a></li>
+            <li class="footer-list__item">
+              <a href="#">Monthly Web Hosting</a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer__brand">
+          <img src="images/logo.svg" alt="" />
+          <p class="footer__copyright">Copyright &copy 2020 Mosh Hamedani</p>
+        </section>
       </div>
-    </section>
+    </footer>
 
     <script src="js/main.js"></script>
   </body>
