Build on scroll Animations.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <!-- Nav Bar -->
@@ -36,14 +37,14 @@
 
     <section class="block block--dark block--skewed-left">
       <div class="container grid grid--1x2">
-        <header class="block__header hero__content">
+        <header class="block__header hero__content" data-aos="fade-right">
           <h1 class="block__heading">Cloud Hosting for Pros</h1>
           <p class="hero__tagline">
             Deploy your websites in less than 60 seconds.
           </p>
           <a href="#" class="btn btn--accent btn--stretched">GET STARTED</a>
         </header>
-        <picture>
+        <picture data-aos="zoom-in">
           <source
             type="image/webp"
             srcset="images/banner.webp 1x, images/banner@2x.webp 2x" />
@@ -57,7 +58,7 @@
 
     <!-- Domains -->
 
-    <section class="block container block-domain">
+    <section class="block container block-domain" data-aos="zoom-in">
       <header class="block__header">
         <h2>Starting at $9 per month</h2>
         <p>
@@ -86,7 +87,7 @@
 
     <!-- Plans -->
 
-    <section class="block container block-plans">
+    <section class="block container block-plans" data-aos="zoom-in-up">
       <div class="grid grid--1x3">
         <div class="plan">
           <div class="card card--secondary">
@@ -162,7 +163,7 @@
         </p>
       </header>
       <article class="grid grid--1x2 feature">
-        <div class="feature__content">
+        <div class="feature__content" data-aos="fade-left">
           <span class="icon-container">
             <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#easy"></use>
@@ -176,7 +177,7 @@
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture>
+        <picture data-aos="zoom-in">
           <source
             type="image/webp"
             srcset="images/easy.webp 1x, images/easy@2x.webp 2x" />
@@ -187,7 +188,7 @@
         /></picture>
       </article>
       <article class="grid grid--1x2 feature">
-        <div class="feature__content">
+        <div class="feature__content" data-aos="fade-right">
           <span class="icon-container">
             <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#computer"></use>
@@ -201,7 +202,7 @@
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture>
+        <picture data-aos="zoom-in">
           <source
             type="image/webp"
             srcset="images/fast.webp 1x, images/fast@2x.webp 2x" />
@@ -212,7 +213,7 @@
         /></picture>
       </article>
       <article class="grid grid--1x2 feature">
-        <div class="feature__content">
+        <div class="feature__content" data-aos="fade-left">
           <span class="icon-container">
             <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#settings"></use>
@@ -226,7 +227,7 @@
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture>
+        <picture data-aos="zoom-in">
           <source
             type="image/webp"
             srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x" />
@@ -237,7 +238,7 @@
         /></picture>
       </article>
       <article class="grid grid--1x2 feature">
-        <div class="feature__content">
+        <div class="feature__content" data-aos="fade-right">
           <span class="icon-container">
             <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#clock"></use>
@@ -251,7 +252,7 @@
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture>
+        <picture data-aos="zoom-in">
           <source
             type="image/webp"
             srcset="images/support.webp 1x, images/support@2x.webp 2x" />
@@ -270,7 +271,7 @@
         <h2 class="block__heading">User-friendly Control Panel</h2>
       </header>
       <div class="container grid grid--1x2">
-        <picture class="block-showcase__image">
+        <picture class="block-showcase__image" data-aos="zoom-in">
           <source
             type="image/webp"
             srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x" />
@@ -279,7 +280,7 @@
             srcset="images/ipad.png 1x, images/ipad@2x.png 2x" />
           <img src="images/ipad.png" alt=""
         /></picture>
-        <ul class="list">
+        <ul class="list" data-aos="fade-up">
           <li>
             <div class="media">
               <div class="media__image">
@@ -337,7 +338,7 @@
 
     <!-- Testimonials -->
 
-    <section class="block">
+    <section class="block" data-aos="fade-up">
       <header class="block__header">
         <h2>What our Customers are Saying</h2>
         <p>
@@ -392,7 +393,12 @@
               rerum?
             </p>
           </div>
-          <a href="#" class="btn btn--secondary btn--stretched">GET STARTED</a>
+          <a
+            data-aos="flip-left"
+            href="#"
+            class="btn btn--secondary btn--stretched"
+            >GET STARTED</a
+          >
         </div>
       </div>
     </div>
@@ -486,5 +492,9 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
