--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Deploy your website in less than 60 seconds."
+    />
+    <title>Moshify - Go Online for Just $9</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -408,12 +412,12 @@
     <footer class="block block--dark block-footer">
       <div class="container grid footer__grid">
         <section class="collapsible collapsible__footer">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">PRODUCTS</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <ul class="list footer__list collapsible__content">
             <li class="footer-list__item"><a href="#">WordPress Hosting</a></li>
             <li class="footer-list__item">
@@ -427,12 +431,12 @@
           </ul>
         </section>
         <section class="collapsible collapsible__footer">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">PRODUCTS</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <ul class="list footer__list collapsible__content">
             <li class="footer-list__item"><a href="#">WordPress Hosting</a></li>
             <li class="footer-list__item">
@@ -447,12 +451,12 @@
         </section>
 
         <section class="collapsible collapsible__footer">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">PRODUCTS</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <ul class="list footer__list collapsible__content">
             <li class="footer-list__item"><a href="#">WordPress Hosting</a></li>
             <li class="footer-list__item">
@@ -466,12 +470,12 @@
           </ul>
         </section>
         <section class="collapsible collapsible__footer">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">PRODUCTS</h2>
             <svg class="icon icon--white collapsible__chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <ul class="list footer__list collapsible__content">
             <li class="footer-list__item"><a href="#">WordPress Hosting</a></li>
             <li class="footer-list__item">
@@ -484,10 +488,10 @@
             </li>
           </ul>
         </section>
-        <section class="footer__brand">
+        <div class="footer__brand">
           <img src="images/logo.svg" alt="" />
           <p class="footer__copyright">Copyright &copy 2020 Mosh Hamedani</p>
-        </section>
+        </div>
       </div>
     </footer>
 
